<resources>
    <string name="app_name">TurboCare-assignment</string>
    <string name="base_url">https://test.turbocare.app/turbo/care/v1/</string>
    <string name="back">back</string>
    <string name="enter_vehicle_number">Enter Vehicle Number</string>
    <string name="eg_mh12ab1234">Eg: MH 12 AB 1234</string>
    <string name="create_profile">Add Vehicle Details</string>
    <string name="next">Next</string>
    <string name="_4_wheeler">4 WHEELER</string>
    <string name="_2_wheeler">2 WHEELER</string>
    <string name="vehicle_make">Vehicle Maker</string>
    <string name="vehicle_model">Vehicle Model</string>
    <string name="vehicle_list">My Vehicles</string>
    <string name="add_vehicle">Add Vehicle</string>
    <string name="vehicle_fuel_type"> Vehicle Fuel Type</string>
    <string name="vehicle_transmission">Vehicle Transmission</string>
    <string name="title_activity_my_vehicle_details">MyVehicleDetails</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
</resources>