<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.MainActivity">

    <RelativeLayout
        android:id="@+id/layout_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:background="@drawable/header_bg"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_back"
            android:layout_centerVertical="true"

            />

        <TextView
            android:id="@+id/title"
            style="@style/HeaderTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:singleLine="true"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@+id/back"
            android:layout_centerHorizontal="true"
            tools:text="Header" />


        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/vc_profile"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"/>


    </RelativeLayout>


    <TextView
        android:id="@+id/txt_vehicle_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_vehicle_number"
        android:layout_below="@+id/layout_header"
        android:layout_marginTop="80dp"
        android:layout_marginStart="50dp"
        android:textColor="#560d9c"
        android:layout_centerHorizontal="true"
        android:textSize="24sp"
        android:fontFamily="@font/poppins_bold"
        />
    <EditText
        android:id="@+id/edit_text_vehicle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_vehicle_number"
        android:layout_marginStart="50dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/custom_edit"
        android:ems="13"
        android:padding="20dp"
        android:hint="@string/eg_mh12ab1234"
        android:layout_centerHorizontal="true"
        />

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_below="@+id/edit_text_vehicle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true">

        <RadioButton
            android:id="@+id/two_wheeler"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@android:color/white"
            android:background="@drawable/custom_radio"
            android:textColor="@drawable/radio_text"
            android:fontFamily="@font/poppins_semibold"
            android:stateListAnimator="@null"
            android:text="@string/_2_wheeler"
            android:padding="16dp"
            />
        <RadioButton
            android:id="@+id/four_wheeler"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_4_wheeler"
            android:layout_marginStart="50dp"
            android:button="@android:color/white"
            android:fontFamily="@font/poppins_semibold"
            android:background="@drawable/custom_radio"
            android:textColor="@drawable/radio_text"
            android:stateListAnimator="@null"
            android:padding="16dp"
            />




    </RadioGroup>

    <Button
        android:id="@+id/next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="100dp"
        android:background="@drawable/custom_edit"
        android:padding="20dp"
        android:textSize="16sp"
        android:drawableEnd="@drawable/ic_next"
        android:layout_centerVertical="true"
        android:textColor="@color/white"
        android:text="@string/next"
        android:fontFamily="@font/poppins_bold"
        />



</RelativeLayout>